# synty-godot-converter

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SyntyConverter.spec  analyze_multi_materials.py  build_exe.bat  build_exe.py  converter.py  extract_unity_properties.py  godot_converter.gd  gui.py  material_list.py  pyproject.toml  requirements-gui.txt  shader_mapping.py  synty_converter.py  synty_converter.spec  synty_converter_gui.py  synty_import_script.gd  synty_shaders.py  tres_generator.py  unity_package.py  unity_parser.py
docs/: ARCHITECTURE.md  FBX_MATERIAL_MATCHING.md  GLOBAL_UNIFORMS.md  HANDOFF.md  MATERIAL_CLASSIFICATION.md  README.md  SESSION_HANDOFF.md  SHADERS.md  architecture.md  shader-reference.md  troubleshooting.md  unity-reference.md  user-guide.md
docs/api/: constants.md  converter.md  godot_converter.md  index.md  material_list.md  shader_mapping.md  tres_generator.md  unity_package.md  unity_parser.md
docs/steps/: 00-cli-orchestration.md  01-validate-inputs.md  02-create-directories.md  03-extract-unity-package.md  04-parse-materials.md  05-parse-material-list.md  06-shader-detection.md  07-tres-generation.md  08-copy-shaders.md  09-copy-textures.md  10-copy-fbx.md  11-generate-mapping.md  12-godot-conversion.md  README.md  gui.md
shaders/: foliage.gdshader  polygon_shader.gdshader  refractive_transparent.gdshader
synty_converter_v2/: __init__.py  __main__.py  config.py  converter.py  gui.py  main.py
synty_converter_v2/classifiers/: __init__.py  material_classifier.py
(+21 files in other folders)
